# ROM-Sorter-Pro

./: .bandit  .bandit.yaml  .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MVP_DOCS.md  README.md  REVIEW.md  TROUBLESHOOTING.md  cleanup_git.py  comment-translation-cache.json  install_dependencies.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-full.txt  requirements-gui.txt  ruff.toml  setup_new_git.bat  simple_rom_sorter.py  split_comments.py  start_rom_sorter.bat  start_rom_sorter.py  start_rom_sorter.sh  translate_comments.py
backups/: translate_comments.py.bak
config/: identify_overrides.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIT.md  AUDIT_DETECTION_SORTING.md  AUDIT_REPO_CLEANUP.md  BACKLOG_REF3.md  BASELINE.md  CHANGELOG.md  CONFIG_REFERENCE.md  CONSOLE_MAPPING.md  DAT_IMPORT_AND_INDEX.md  DB_ENTRYPOINTS.md  DEVELOPER_GUIDE.md  FEATURE_BACKLOG.md  FEATURE_CATALOG.md  GUI_REFACTORING_PROPOSAL.md  IDENTIFICATION_STRATEGY.md  IGIR_INTEGRATION.md  INDEX.md  INTEGRATIONS.md  ISSUE_BACKLOG.md  MASTER.md  MVP_DOCS.md  REFACTOR_PLAN.md  RELEASE_AUDIT_2026_01_28.md  RELEASE_AUDIT_2026_01_28_V2.md  RELEASE_AUDIT_2026_01_29.md  RELEASE_AUDIT_BACKLOG.md  RELEASE_BACKLOG_CHECKLIST.md  RELEASE_PROCESS.md  ROADMAP.md  SCREENSHOTS.md  TEST_STRATEGY.md  USER_MANUAL.md  VIDEO_TUTORIAL.md  gui-refactoring-plan.md  import-guidelines-updated.md  import-guidelines.md  roadmap.md  version-temp.md
issues/: epics.json
scripts/: __init__.py  bench_io_throttle.py  update_rom_database.py
src/: README.md  config.py  (+13 more)
(+637 files in other folders)
