[tool.poetry]
name = "rom-sorter-pro"
version = "1.0.0"
description = "ROM Sorter Pro"
authors = ["ROM Sorter Pro"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.6"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
